--- a/personal/personalTT.css
+++ b/personal/personalTT.css
@@ -9,9 +9,23 @@ body{
 	width:100%;
 }
 div#center{
-	margin:0px auto 0px auto;
-	width:60%;
+	margin:150px auto 0px auto;
+	width:700px;
+	text-align:center;
 }
 h1 {
+	color:red;
+}
+input{
+	font-size: 20px;
+	font-family: CaviarDreams;
+	text-align:center;
+}
+input[type="text"]{
+	border: 1px black solid;
+}
+input[type="submit"]{
+	border: 1px red solid;
+	background-color:white;
 	color:red;
 }
