--- a/personal/personalTT.css
+++ b/personal/personalTT.css
@@ -4,7 +4,7 @@
 }
 
 body{
-	font-family:CaviarDreams;
+	font-family:CaviarDreams, Arial;
 	font-weight: lighter;
 	width:100%;
 }
@@ -18,7 +18,7 @@ h1 {
 }
 input{
 	font-size: 20px;
-	font-family: CaviarDreams;
+	font-family: CaviarDreams, Arial;
 	text-align:center;
 }
 input[type="text"]{
