--- a/personal/calendario/css/calendar.css
+++ b/personal/calendario/css/calendar.css
@@ -1,5 +1,3 @@
-@import url('demo.css');
-
 @font-face {
   font-family: 'fontawesome-selected';
   src: url("../font/fontawesome-selected.eot");
@@ -10,20 +8,20 @@
 
 .fc-calendar-container {
 	position: relative;
-	height: 400px;
+	height: 100%
 	width: 400px;
 }
 
 .fc-calendar {
 	width: 100%;
 	height: 100%;
+	color: #f00;
 }
 
 .fc-calendar .fc-head {
 	height: 30px;
 	line-height: 30px;
 	background: #ccc;
-	color: #fff;
 }
 
 .fc-calendar .fc-body {
@@ -91,7 +89,7 @@
 	font-size: 20px;
 	line-height: 20px;
 	font-weight: 700;
-	color: #ddd;
+	color: #000000;
 	text-shadow: 0 -1px 0 rgba(255,255,255,0.8);
 	bottom: 5px;
 	right: 5px;
@@ -124,12 +122,16 @@
 
 .custom-calendar-wrap {
 	margin: 10px auto;
+	height: 100%;
+	padding: 0 0 5% 0;
 	position: relative;
 	overflow: hidden;
 }
 
 .custom-inner {
 	background: #fff;
+	height:100%;
+	padding: 0 0 5% 0;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.2);
 }
 
@@ -159,7 +161,7 @@
 	padding: 5px 10px 10px 20px;
 	height: 70px;
 	position: relative;
-	border-top: 5px solid #ef4f69;
+	border-top: 5px solid #ff0000;
 	border-bottom: 1px solid #ddd;
 }
 
@@ -170,7 +172,7 @@
 }
 
 .custom-header h2 {
-	color: #495468;
+	color: #000000;
 	font-weight: 300;
 	font-size: 18px;
 	margin-top: 10px;
@@ -179,7 +181,7 @@
 .custom-header h3 {
 	font-size: 10px;
 	font-weight: 700;
-	color: #b7bbc2;
+	color: #000000;
 }
 
 .custom-header nav span {
@@ -210,7 +212,7 @@
 
 .custom-header nav span:before {
 	font-family: 'fontawesome-selected';
-	color: #ef4f69;
+	color: #ff0000;
 	position: absolute;
 	text-align: center;
 	width: 100%;
@@ -252,7 +254,7 @@
 	width: 20px;
 	height: 20px;
 	text-align: center;
-	background: #ef4f69;
+	background: #ff0000;
 	box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 	cursor: pointer;
 	line-height: 13px;
@@ -281,7 +283,7 @@
 	padding: 20px;
 	background: #fff;
 	border-bottom: 1px solid #ddd;
-	border-top: 5px solid #ef4f69;
+	border-top: 5px solid #ff0000;
 	box-shadow: 0 1px rgba(255,255,255,0.9);
 	margin-bottom: 30px;
 }
@@ -291,7 +293,7 @@
 }
 
 .custom-content-reveal a {
-	color: #ef4f69;
+	color: #ff0000;
 }
 
 .custom-content-reveal a:hover {
@@ -301,7 +303,7 @@
 /* Modifications */
 
 .fc-calendar-container {
-	height: 400px;
+	height: 100%;
 	width: auto;
 	padding: 30px;
 	background: #f6f6f6;
@@ -310,7 +312,7 @@
 
 .fc-calendar .fc-head {
 	background: transparent;
-	color: #ef4f69;
+	color: #ff0000;
 	font-weight: bold;
 	text-transform: uppercase;
 	font-size: 12px;
@@ -330,19 +332,24 @@
 	left: 50%;
 	text-align: center;
 	margin: -10px 0 0 -15px;
-	color: #686a6e;
+	color: #000000;
 	font-weight: 400;
 	pointer-events: none;
 }
 
 .fc-calendar .fc-row > div.fc-today {
-	background: #ef4f69;
+	background: #ff0000;
 	box-shadow: inset 0 -1px 1px rgba(0,0,0,0.1);
 }
 
 .fc-calendar .fc-row > div.fc-today > span.fc-date {
 	color: #fff;
 	text-shadow: 0 1px 1px rgba(0,0,0,0.1);
+}
+
+.fc-content .fc-weekday + div{
+	/* hide text inside these divs as it tends to overflow*/
+	color: white;
 }
 
 .fc-calendar .fc-row > div.fc-content:after {
@@ -363,7 +370,7 @@
 }
 
 .fc-calendar .fc-row > div.fc-content:hover:after{
-	color: #ef4f69;
+	color: #ff0000;
 }
 
 .fc-calendar .fc-row > div.fc-today.fc-content:hover:after{
@@ -383,4 +390,139 @@
 	.fc-calendar .fc-row > div > span.fc-date {
 		font-size: 15px;
 	}
+}
+/* General Demo Style */
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+
+html { height: 100%; }
+
+*,
+*:after,
+*:before {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+}
+
+/* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
+.clearfix:before,
+.clearfix:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+.clearfix {
+    *zoom: 1;
+}
+
+body {
+    font-family: 'Lato', Calibri, Arial, sans-serif;
+    font-weight: 300;
+    font-size: 15px;
+    color: #333;
+    height: 100%;
+    overflow: hidden;
+}
+
+a {
+	color: #555;
+	text-decoration: none;
+}
+
+.container {
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+
+.container > header,
+.main {
+	width: 100%;
+	margin: 0 auto;
+	height: 100%;
+	padding: 1% 0 1% 0;
+}
+
+.container > header {
+	padding: 30px;
+}
+
+.container > header h1 {
+	font-size: 34px;
+	line-height: 38px;
+	margin: 0;
+	font-weight: 700;
+	color: #fff;
+	float: left;
+	text-shadow: 0 1px 1px rgba(0,0,0,0.3);
+}
+
+.container > header h1 span {
+	font-size: 18px;
+	font-weight: 300;
+	display: block;
+}
+
+/* Header Style */
+.codrops-top {
+	line-height: 24px;
+	font-size: 11px;
+	background: #fff;
+	background: rgba(255, 255, 255, 0.5);
+	text-transform: uppercase;
+	z-index: 9999;
+	position: relative;
+	box-shadow: 1px 0px 2px rgba(0,0,0,0.2);
+}
+
+.codrops-top a {
+	padding: 0px 10px;
+	letter-spacing: 1px;
+	color: #333;
+	display: inline-block;
+}
+
+.codrops-top a:hover {
+	background: rgba(255,255,255,0.8);
+	color: #000;
+}
+
+.codrops-top span.right {
+	float: right;
+}
+
+.codrops-top span.right a {
+	float: left;
+	display: block;
+}
+
+/* Demo Buttons Style */
+.codrops-demos {
+	float: right;
+}
+
+.codrops-demos a {
+    display: inline-block;
+    margin: 10px;
+    color: #fff;
+    font-weight: 700;
+    line-height: 30px;
+    border-bottom: 4px solid transparent;
+}
+
+.codrops-demos a:hover {
+	color: #000;
+	border-color: #000;
+}
+
+.codrops-demos a.current-demo,
+.codrops-demos a.current-demo:hover {
+	color: rgba(255,255,255,0.5);
+	border-color: rgba(255,255,255,0.5);
 }
