--- a/ux/lib/SlickGrid/css/slick.grid.css
+++ b/ux/lib/SlickGrid/css/slick.grid.css
@@ -36,7 +36,7 @@ classes should alter those!
 }
 
 .slick-headerrow-column.ui-state-default {
-  padding: 4px;
+  padding: 0px 0px 4px 0px;
 }
 
 .slick-header-column-sorted {
