--- a/ux/spreadsheet.css
+++ b/ux/spreadsheet.css
@@ -52,6 +52,20 @@ input.column-filter{
     text-align: center;
     color: blue;
 }
-div..slick-headerrow-column{
+div.slick-headerrow-column{
     text-align:center;
+}
+div.save{
+    background-color: blue;
+    right: 0px;
+}
+div.discard{
+    background-color: red;
+    left: 0px;
+}
+div.persistence_button{
+    color: white;
+    width: 100px;
+    position: absolute;
+    top: 0px;
 }
