--- a/ux/spreadsheet.css
+++ b/ux/spreadsheet.css
@@ -1,7 +1,7 @@
 #entry{
-	height: 500px;
+	height: 89%;
     margin: 0px auto 0px auto;
-	width: 500px;
+	width: 100%;
 }
 body {
     font-family: Caviar;
