Save button gray looks nicer

--- a/ux/spreadsheet.css
+++ b/ux/spreadsheet.css
@@ -56,7 +56,7 @@ div.slick-headerrow-column{
     text-align:center;
 }
 div.save{
-    background-color: blue;
+    background-color: gray;
     right: 0px;
 }
 div.discard{
