--- a/ux/slider.css
+++ b/ux/slider.css
@@ -1,12 +1,15 @@
 body{
     font-family: Caviar;
-	color: #f00;
-	width: auto;
-	height: auto;
-	text-align:center;
+	color:       #f00;
+	width:       auto;
+	height:      auto;
+	text-align:  center;
 }
 h1{
 	margin-top:1%;
+}
+h2{
+    font-size: 1em;
 }
 div.slider{
 	width:50%;
