--- a/ux/spreadsheet.css
+++ b/ux/spreadsheet.css
@@ -1,5 +1,5 @@
 #entry{
-	height: 89%;
+	height: 70%;
     margin: 0px auto 0px auto;
 	width: 100%;
 }
@@ -68,4 +68,10 @@ div.persistence_button{
     width: 100px;
     position: absolute;
     top: 0px;
+}
+iframe.bottom_menu{
+    width:      100%;
+    height:     13%;
+    margin-top: 3%;
+    border:     none;
 }
