--- a/ux/penalizer.css
+++ b/ux/penalizer.css
@@ -5,17 +5,28 @@ body{
 	height:      auto;
 	text-align:  center;
 }
+
 h1{
 	margin-top:1%;
 }
+
 h2{
     font-size: 1em;
 }
+
 div.slider{
 	width:50%;
 	margin-left:25%;
 	margin-top:2%;
 }
+
 span.penalty_indicator{
 	color: #000;
+}
+
+iframe.bottom_menu{
+    width:      100%;
+    height:     80px;
+    margin-top: 30px;
+    border:     none;
 }
