--- a/ux/lib/jquery/css/custom-theme/jquery-ui-1.10.4.custom.css
+++ b/ux/lib/jquery/css/custom-theme/jquery-ui-1.10.4.custom.css
@@ -773,8 +773,6 @@ button.ui-button::-moz-focus-inner {
 	position: absolute;
 	z-index: 9999;
 	max-width: 300px;
-	-webkit-box-shadow: 0 0 5px #aaa;
-	box-shadow: 0 0 5px #aaa;
 }
 body .ui-tooltip {
 	border-width: 2px;
@@ -802,7 +800,7 @@ body .ui-tooltip {
 	font-size: 1em;
 }
 .ui-widget-content {
-	border: 1px solid #aaa;
+	border: 1px solid red;
 	background: #ffffff url("images/ui-bg_flat_75_ffffff_40x100.png") 50% 50% repeat-x;
 	color: #000;
 }
