--- a/ux/viewer.css
+++ b/ux/viewer.css
@@ -5,10 +5,19 @@ div.calendar{
     float:      right;
 }
 
+div.day_names{
+
+}
+
+div.days{
+    height:      100%;
+    overflow-y: scroll;
+}
+
 span.day_name{
-    width:      100%;
+    width:      13.5%;
     display:    inline-block;
-    background: black;
+    background: red;
     color:      white;
     margin:     0px;
     padding:    0px;
@@ -19,15 +28,77 @@ span.day{
     display:        inline-block;
     width:          13.5%;
     vertical-align: top;
-    height:         100%;
+    height:         200%;
 }
 
 span.booking{
     display:    inline-block;
+    position:   relative;
+    font-size:  0.75em;
+    background: red;
+    border:     1px white solid;
+    color:      white;
+    width:      100%;
+}
+
+span.booking_text{
+    margin-top: 40%;
 }
 
 .viewer_entry{
 	height: 69%;
 	width: 30%;
     position: absolute;
+}
+
+div.floater{
+    width: 100%;
+    height: 50%;
+    margin-bottom: -7px;
+}
+/*https://jqueryui.com/tooltip/#custom-style*/
+.ui-tooltip, .arrow:after {
+    background: red;
+    border: 2px solid red;
+}
+
+.ui-tooltip {
+    padding: 10px 20px;
+    color: white;
+    text-transform: uppercase;
+}
+.arrow {
+    width: 70px;
+    height: 16px;
+    overflow: hidden;
+    position: absolute;
+    left: 50%;
+    margin-left: -35px;
+    bottom: -16px;
+}
+.arrow.top {
+    top: -16px;
+    bottom: auto;
+}
+
+.arrow.left {
+    left: 20%;
+}
+.arrow:after {
+    content: "";
+    position: absolute;
+    left: 20px;
+    top: -20px;
+    width: 25px;
+    height: 25px;
+    background-color: red;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    tranform: rotate(45deg);
+}
+  .arrow.top:after {
+    bottom: -20px;
+    top: auto;
 }
