--- a/ux/lib/jquery/css/custom-theme/jquery-ui-1.10.4.custom.css
+++ b/ux/lib/jquery/css/custom-theme/jquery-ui-1.10.4.custom.css
@@ -800,7 +800,7 @@ body .ui-tooltip {
 	font-size: 1em;
 }
 .ui-widget-content {
-	border: 1px solid red;
+	border: 1px solid #aaa;
 	background: #ffffff url("images/ui-bg_flat_75_ffffff_40x100.png") 50% 50% repeat-x;
 	color: #000;
 }
